@@ -23,8 +23,8 @@ public class NodeHistoryManager {
     private final Semaphore s_room = new Semaphore(1);
 
     private NodeHistoryManager() {
-        this.roomNodes = new HashSet<>();
-        this.userNodes = new HashSet<>();
+        roomNodes = new HashSet<>();
+        userNodes = new HashSet<>();
         instance = new NodeHistoryManager();
     }
 
@@ -42,7 +42,7 @@ public class NodeHistoryManager {
     }
 
     public void setRoomNodes(Set<String> roomNodes) {
-        this.roomNodes.addAll(roomNodes);
+        NodeHistoryManager.roomNodes.addAll(roomNodes);
     }
 
     public void addRoomNode(String node) {
@@ -66,7 +66,7 @@ public class NodeHistoryManager {
     }
 
     public void setUserNodes(Set<String> userNodes) {
-        this.userNodes.addAll(userNodes);
+        NodeHistoryManager.userNodes.addAll(userNodes);
     }
 
 
@@ -88,11 +88,12 @@ public class NodeHistoryManager {
         // checking if I am the leader to solve the partition
         while(true){
             sleepRandomTime();
-        if (ReplicationManager.getInstance().getUserNodes().get(0).equals(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())) {
+        if (ReplicationManager.getInstance().getUserNodes().getFirst().equals(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())) {
             solvingPartitionUser = true;
             userNodes.stream().filter(node -> !ReplicationManager.getInstance().getUserNodes().contains(node))
                     .forEach(node -> new GetListUserNodesMessage(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())
                             .sendMessage(new Participant(0, "-", node)));
+            System.out.println(ReplicationManager.getInstance().getUserNodes());
         }}
     }
 
@@ -102,18 +103,19 @@ public class NodeHistoryManager {
         // checking if I am the leader to solve the partition
         while(true){
             sleepRandomTime();
-            if (ReplicationManager.getInstance().getRoomNodes().get(0).equals(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())) {
+            if (ReplicationManager.getInstance().getRoomNodes().getFirst().equals(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())) {
                 solvingPartitionRoom = true;
                 roomNodes.stream().filter(node -> !ReplicationManager.getInstance().getRoomNodes().contains(node))
                         .forEach(node -> new GetListRoomNodesMessage(RoomStateManager.getInstance().getIp() + ":" + RoomStateManager.getInstance().getPort())
                                 .sendMessage(new Participant(0, "-", node)));
+                System.out.println(ReplicationManager.getInstance().getRoomNodes());
             }
         }
     }
 
     private static void sleepRandomTime() {
         try {
-            Thread.sleep((long) (Math.random() * 100000));
+            Thread.sleep((long) (Math.random() * 100000 + 30000));
         } catch (InterruptedException ignored) {
 
         }
